fix: iOS Facebook in-app browser compatibility
- Add iOS in-app browser detection and FingerprintJS fallback
- Implement global error handlers for unhandled promise rejections
- Add safe storage wrapper for Redux Persist with in-memory fallback
- Enhance iOS WebKit meta tags for better rendering
- Prevent app crashes when localStorage/FingerprintJS blocked

Resolves blank page issue on iOS Facebook/Instagram browsers

--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo/logo2.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!-- ========================================
+       iOS WebKit Optimization
+       Ensures proper rendering in iOS in-app browsers
+       ======================================== -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2, user-scalable=yes, viewport-fit=cover" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="format-detection" content="telephone=no" />
+  
   <title>Chill SIM</title>
 
   <!-- Google Tag Manager -->
