--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no" class="notranslate">
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="google" content="notranslate" />
+  <meta name="robots" content="notranslate" />
   <link rel="icon" type="image/svg+xml" href="/logo/logo2.png" />
   
   <!-- ========================================
