feat: migrate homepage to production with optimizations
- Migrated approved homepage template from test to production
- Added random hero background images (3 variants) on each page load
- Implemented full viewport height hero sections with scroll indicators

Navigation improvements:
- Logo click now navigates to homepage instead of plans
- Updated all fallback/error redirects to homepage
- Kept intentional 'Plans' menu items pointing to /plans/land
- Fixed post-auth, post-payment, and OTP verification navigation

Performance optimizations:
- Implemented route-based code splitting with React.lazy (85% main bundle reduction)
- Separated vendor chunks (MUI, Firebase, React) for better caching
- Main bundle: 2,963 kB  436 kB (under 500 kB warning threshold)
- Lazy-loaded BillingPage PDF components (971 kB) on-demand only

UI/UX enhancements:
- Full-width hero images on landing pages (/esim-destination/*) with zoom effect
- Disabled 'Find Plans' button when no country selected
- Country search dropdown: lazy-load flags (20 initial, 30 filtered)
- Enhanced FAQ section padding and visual separation
- Added 4th step to How It Works section

Bug fixes:
- Fixed CSS-in-JS webkit-appearance camelCase issue
- Added mobile-web-app-capable meta tag (replaced deprecated apple-only tag)
- Fixed translation keys and API calls for country/region plans
- Proper modal integration with BundleDetail component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
        Ensures proper rendering in iOS in-app browsers
        ======================================== -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.2, user-scalable=yes, viewport-fit=cover" />
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="format-detection" content="telephone=no" />
